projetGL/src/test/deca/extension/synt/invalid/test_invalid_02.deca
{
    int x=0;
    int[1] tab;
}